--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>infersgroup</title>
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300|Raleway:300,400,900,700italic,700,300,600">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
+  <link href="img/logos/favicon.png" rel="icon" >
   <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -30,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="navbar-brand" href="#"><img style="margin-top:-50px" width=200  src="img/logos/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img style="margin-top:-15px" width=70  src="img/logos/logo.png" alt="logo"></a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,15 +51,13 @@
           <div class="container">
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
-                <h1 class="bnr-title">We are at ba<span>ker</span></h1>
                 <h2 class="bnr-sub-title">Going a new journey!!</h2>
                 <p class="bnr-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip <br>ex ea commodo consequat.</p>
                 <div class="brn-btn">
-                  <a href="#" class="btn btn-download">Download now!</a>
-                  <a href="#" class="btn btn-more">Learn More</a>
+                  <a href="#" class="btn btn-download" style="background-color:transparent; color:white;border:2px solid white;">Learn More</a>
                 </div>
                 <div class="overlay-detail">
-                  <a href="#feature"><i class="fa fa-angle-down"></i></a>
+                  <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                 </div>
               </div>
             </div>
@@ -74,37 +73,42 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="wrap-item text-center">
               <div class="item-img">
-                <img src="img/ser01.png">
+                <img src="img/ser01.png" class="img-scale">
               </div>
-              <h3 class="pad-bt15">Creative Concept</h3>
+              <h3 class="pad-bt15">Knowledge Management</h3>
+              <br>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><a href="#" class="btn btn-2">Learn More</a></p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="wrap-item text-center">
               <div class="item-img">
-                <img src="img/ser02.png">
+                <img src="img/ser03.png" class="img-scale">
               </div>
-              <h3 class="pad-bt15">Amazing Design</h3>
+              <h3 class="pad-bt15">Ecosystems <br>&amp;<br> Networks</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><a href="#" class="btn btn-4">Learn More</a></p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="wrap-item text-center">
               <div class="item-img">
-                <img src="img/ser03.png">
+                <img src="img/ser02.png" class="img-scale">
               </div>
-              <h3 class="pad-bt15">Cost effective</h3>
+              <h3 class="pad-bt15">Strategy <br>&amp;<br> Risk Assessment</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><a href="#" class="btn btn-2">Learn More</a></p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="wrap-item text-center">
               <div class="item-img">
-                <img src="img/ser04.png">
+                <img src="img/ser04.png" class="img-scale">
               </div>
-              <h3 class="pad-bt15">Secure</h3>
+              <h3 class="pad-bt15">Science Communication &amp; Public Engagement</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><a href="#" class="btn btn-4">Learn More</a></p>
             </div>
           </div>
         </div>
