--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -31,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="navbar-brand" href="#"><img style="margin-top:-15px" width=70  src="img/logos/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img style="margin-top:-10px" width=50  src="img/logos/logo.png" alt="logo"></a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -120,7 +121,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">What We Do?</h2>
+            <h2 class="service-title pad-bt15">Projects</h2>
             <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
             <hr class="bottom-line">
           </div>
@@ -163,13 +164,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Our Recent Works</h2>
+            <h2 class="service-title pad-bt15">Our Partners</h2>
             <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port01.jpg" class="img-responsive">
+              <img src="img/molapo.png" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -178,7 +179,7 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port02.jpg" class="img-responsive">
+              <img src="img/bb.jpg" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -187,7 +188,7 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port03.jpg" class="img-responsive">
+              <img src="img/ub.jpg" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -196,7 +197,7 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port04.jpg" class="img-responsive">
+              <img src="img/wellcome.png" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -205,7 +206,7 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port05.jpg" class="img-responsive">
+              <img src="img/download.jpeg" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -214,7 +215,7 @@
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/port06.jpg" class="img-responsive">
+              <img src="img/download.png" width="200" height="200" class="img-responsive">
               <figcaption>
                 <h2>Project For Everyone</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
@@ -349,9 +350,21 @@
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
-              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>A99 Adam Street<br>Texas, TX 555072</p>
-              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@infersgroup.com</p>
-              <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+41 5787 2323</p>
+              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>PO BOX 301093, Tlokweng, Unit 12A, Plot 4921<br>Village Health and Recreation Club Complex, Gaborone, Botswana</p>
+              <p><i class="fas fa-envelope fa-fw pull-left fa-2x"></i>info@infersgroup.com</p>
+              <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+267 311 7204</p>
+              <div class="buttons">
+                <!--Facebook-->
+                <ul class="social">
+            <li><a class="fb-ic mr-3" style="color:#1b2029;" href="https://www.facebook.com/GabsCreativeCapital/" role="button"><i class="fab fa-lg fa-facebook-f fa-2x"></i></a></li>
+            <!--Twitter-->
+            <li><a class="tw-ic mr-3" style="color:#1b2029;" href="https://twitter.com/Sadc2022" role="button"><i class="fab fa-lg fa-twitter fa-2x"></i></a></li>
+            <!--Instagram-->
+            <li><a class="ins-ic mr-3" style="color:#1b2029;" href="https://www.instagram.com/gabs_creative_capital/" role="button"><i class="fab fa-lg fa-instagram fa-2x"></i></a></li>
+            <!--Youtube-->
+            <li><a class="yt-ic mr-3" style="color:#1b2029;" role="button"><i class="fab fa-lg fa-youtube fa-2x"></i></a></li>
+            </ul>
+                </div>
             </div>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -396,7 +409,7 @@
     <footer id="footer">
       <div class="container">
         <div class="row text-center">
-          <p>&copy; infersgroup Theme. All Rights Reserved.</p>
+          <p>&copy; 2015 Infers Group PTY (LTD). All Rights Reserved.</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
@@ -404,7 +417,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=infersgroup
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="https://bootstrapmade.com/">Infers Group PTY (LTD)</a>
           </div>
         </div>
       </div>
