added links to partners images

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="banner-info text-center wow fadeIn delay-05s" style="margin-top:10vh">
                                 <h2 class="bnr-sub-title" style="color:black">Infers Group</h2>
-                                <p class="bnr-para" style="color:black">"Fucking up the economy (in a good way)."</p>
+                                <p class="bnr-para" style="color:black">"Bridging the knowledge gap"</p>
                                 <div class="overlay-detail">
                                     <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                                 </div>
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="vision-item">
-                                <h2 class="featurette-heading"><span style="font-size: 60px;color:black">Who</span> <span style="font-size: 60px;color:black">We Are</span></span></h2>
+                                <h2 class="featurette-heading"><span style="font-size: 50px;color:black">Who</span> <span style="font-size: 60px;">We Are</span></span></h2>
                             <p>Infers Group was set up in 2015 as a knowledge management company that connects societies
                                 and
                                 knowledge producers/institutions to communicate, engage and establish each other’s
@@ -114,7 +114,7 @@
         </section>
 
         <!--Vision and Mission-->
-        <section id="vision-and-mission" style="">
+        <section id="vision-and-mission">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12 vision ">
@@ -143,7 +143,7 @@
         <section id="team" class="team-section text-center my-5">
 
             <!-- Section heading -->
-            <h2 class="h1-responsive font-weight-bold my-5">Our amazing team</h2>
+            <h2 class="h1-responsive font-weight-bold my-5">Our <span style="color:black;font-size:55px">Amazing</span> Team</h2>
             <!-- Section description -->
             <p class="grey-text w-responsive mx-auto mb-5 text-center">Loream iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
                 eum porro a pariatur veniam.</p>
