--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
         <div class="container">
             <h2>Our Partners</h2>
              <section class="customer-logos slider">
-                <div class="slide"><img src="img/bb.jpg"></div>
-                <div class="slide"><img src="img/download.jpeg"></div>
-                <div class="slide"><img src="img/ub.jpg"></div>
-                <div class="slide"><img src="img/web_logo.jpg"></div>
-                <div class="slide"><img src="img/wellcome.png"></div>
-                <div class="slide"><img src="img/molapo.png"></div>
+                <div class="slide"><a href="https://www.bb.org.bw/" target="_blank"><img src="img/bb.jpg"></a></div>
+                <div class="slide"><a href="http://www.bshdngo.org/" target="_blank"><img src="img/download.jpeg"></a></div>
+                <div class="slide"><a href="https://www.ub.bw/" target="_blank"><img src="img/ub.jpg"></a></div>
+                <div class="slide"><a href="http://www.naftec.org/" target="_blank"><img src="img/web_logo.jpg"></a></div>
+                <div class="slide"><a href="https://wellcome.ac.uk/" target="_blank"><img src="img/wellcome.png"></a></div>
+                <div class="slide"><a href="https://www.facebook.com/pages/category/Tour-Agency/Molapo-Crossing-182943338558621/" target="_blank"><img src="img/molapo.png"></a></div>
              </section>
           </div>
     </section>
