added footer to about page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                                     <li class=""><a href="services.html">Services</a></li>
                                     <li class=""><a href="projects.html">Projects</a></li>
                                     <li class="active"><a href="about.html">About</a></li>
-                                    <li class=""><a href="#contact">Contact Us</a></li>
+                                    <li class=""><a href="index.html#contact">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="vision-item">
+                        <div id="feature" class="vision-item">
                                 <h2 class="featurette-heading"><span style="font-size: 50px;color:black">Who</span> <span style="font-size: 60px;">We Are</span></span></h2>
                             <p>Infers Group was set up in 2015 as a knowledge management company that connects societies
                                 and
@@ -158,7 +158,7 @@
                             <img src="img/team/abe.jpg" width=230 class="rounded z-depth-1" alt="Sample avatar">
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Abraham Mamela</h5>
-                        <p class="text-uppercase blue-text"><strong>Managing Director</strong></p>
+                        <p class="text-uppercase blue-text"><strong>Optimus Gaytron</strong></p>
                         <p class="grey-text">Innovation for Knowledge Economy thought leader; Policy and Engagement
                             Specialist.</p>
 
@@ -259,6 +259,18 @@
             </div>
         </section>
         <!-- Section: Team v.1 -->
+
+    <footer id="footer" style="padding-top:60px">
+            <div class="container">
+              <div class="row text-center">
+                <p>&copy; 2015 Infers Group PTY (LTD). All Rights Reserved.</p>
+                <div class="credits">
+      
+                  Designed by Infers Group PTY (LTD)
+                </div>
+              </div>
+            </div>
+          </footer>
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery.easing.min.js"></script>
