--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<style>
+  @import url('https://fonts.googleapis.com/css?family=PT+Sans|Playfair+Display&display=swap');;
+#main{
+  font-family: 'Playfair Display', serif;
+}
+</style>
 
 <body>
 
@@ -49,9 +55,9 @@
         <div class="wrapper">
           <div class="container">
             <div class="row">
-              <div class="banner-info text-center wow fadeIn delay-05s">
-                <h2 class="bnr-sub-title">Going a new journey!!</h2>
-                <p class="bnr-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip <br>ex ea commodo consequat.</p>
+              <div class="banner-info text-center wow fadeIn delay-05s" style="padding-top:150px">
+                <h2 class="bnr-sub-title" id="main">Bridging The Knowledge Gap.</h2>
+                <p class="bnr-para" style="font-size:20px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam laboriosam inventore cupiditate quam unde, molestiae ducimus soluta mollitia saepe, illo facilis officia quisquam maxime et deleniti sapiente ea! Quidem.</p>
                 <div class="overlay-detail">
                   <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                 </div>
@@ -118,7 +124,7 @@
                 <div class="row featurette">
                     <div class="col-md-7">
                       <h2 class="featurette-heading"><span style="font-size: 60px;color:black">Our</span> <span style="font-size: 60px;">Mandate</span></span></h2>
-                      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                      <p class="lead">We bring together brilliant minds, creating ecosystems that allow the ambition of knowledge economies to become reality.</p>
                     </div>
                     <div class="col-md-5">
                       <img class="featurette-image img-fluid mx-auto" width=300 style="margin-left:20%; margin-top:-30px" src="img/mandate.svg" alt="mandate image">
@@ -263,7 +269,7 @@
           <p>&copy; 2015 Infers Group PTY (LTD). All Rights Reserved.</p>
           <div class="credits">
 
-            Designed by <a href="https://bootstrapmade.com/">Infers Group PTY (LTD)</a>
+            Designed by <a href="">Infers Group PTY (LTD)</a>
           </div>
         </div>
       </div>
