--- a/projects.html
+++ b/projects.html
@@ -49,10 +49,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="banner-info text-center wow fadeIn delay-05s" style="margin-top:10vh">
-                            <h2 class="bnr-sub-title" style="color:black">What we offer.</h2>
+                            <h2 class="bnr-sub-title" style="color:black">What we do.</h2>
                             <p class="bnr-para" style="color:black">"Bridging the knowledge gap"</p>
                             <div class="overlay-detail">
-                                <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
+                                <a href="#projects"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                             </div>
                         </div>
                     </div>
@@ -63,10 +63,10 @@
     <!--/ HEADER-->
 
     <main>
-        <section class="cust-container">
+        <section class="cust-container" id="projects">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="img/projects/nano.jpg" style="border-radius:50%;margin:auto;display:block;"
+                    <img src="img/projects/nano.jpg"  style="border-radius:50%;margin:auto;display:block;"
                         alt="Generic placeholder image" width="340" height="340">
                     <h2>Nanoverse and Nanoworld Comic Book project with Botswana Institute of Technology Research and
                         Innovation (BITRI): </h2>
@@ -108,7 +108,7 @@
 
                 <div class="row featurette">
                     <div class="col-md-5 order-md-1">
-                        <img class="featurette-image img-fluid mx-auto" width=680 src="img/projects/sadc.png"
+                        <img class="featurette-image img-fluid mx-auto" width=500 style="padding-top:150px;display:block;margin:auto;" src="img/projects/sadc.png"
                             alt="Watermellon image">
                     </div>
                     <div class="col-md-7 order-md-2">
@@ -136,17 +136,13 @@
 
                 <div class="row featurette">
                     <div class="col-md-7">
-                        <h2 class="featurette-heading">Strategy <span class="text-muted">&amp; Risk Assessment.</span>
+                        <h2 class="featurette-heading">Monitoring and Evaluation for THRiVE-2 with Makerere University School of Medicine, Kampala, Uganda:
                         </h2>
-                        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-                            felis euismod
-                            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                            tellus ac cursus
-                            commodo.</p>
+                        <p class="lead">Infers Group has been tasked with providing monitoring and evaluation services for a Uganda-based research enrichment project funded by Wellcome Trust. The project aims to enable doctoral trainees and young people in schools to identify their preferred approaches to engagement.</p>
                     </div>
                     <div class="col-md-5">
-                        <img class="featurette-image img-fluid mx-auto" width=300 src="img/projects/thrive-logo.png"
-                            alt="yoga instructor image">
+                            <a href="https://thrive.or.ug/" target="_blank"><img  class="featurette-image img-fluid mx-auto" width=300 src="img/projects/thrive-logo.png"
+                            alt="yoga instructor image" ></a>
                     </div>
                 </div>
 
@@ -154,8 +150,8 @@
 
                 <div class="row featurette">
                     <div class="col-md-5">
-                        <img class="featurette-image img-fluid mx-auto" style="border-radius:50%" width=280
-                            src="img/projects/Vision-2036.png" alt="yoga instructor image">
+                            <a href="http://www.gov.bw/en/Ministries--Authorities/Ministries/Ministry-of-Local-Government-MLG1/News/VISION-2036-Prosperity-for-all-/" target="_blank"><img class="featurette-image img-fluid mx-auto" style="border-radius:50%" width=280
+                            src="img/projects/Vision-2036.png" alt="yoga instructor image"></a>
                     </div>
                     <div class="col-md-7">
                         <h2 class="featurette-heading">Engagement Workshops on Botswana’s Vision 2036:</h2>
@@ -167,13 +163,13 @@
 
                 <div class="row featurette">
                     <div class="col-md-7">
-                        <h2 class="featurette-heading">Strategy <span class="text-muted">&amp; Risk Assessment.</span>
+                        <h2 class="featurette-heading">Dira Digital Platform
                         </h2>
-                        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-                            felis euismod
-                            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                            tellus ac cursus
-                            commodo.</p>
+                        <p class="lead">Dira is a digital platform that networks people’s expertise and collaborative projects. The website is a platform for sharing expertise and technocracy in the city and presents an element of social cohesion and cooperation, similar to mafisa. Its unique features are that it primarily networks people with expertise 
+                            and experience, creating bidirectional relationships between entities like universities and the society. It facilitates a “plug-and-play”  environment in which projects and IP matching and management become simpler.
+                        </p><p> 
+                        The platform “Africanises” the current model of social and professional networks such as LinkedIn, and allows them to be raised to the level of project collaboration. It manages IP protection and has simple and intuitive project planning and projection tools. These tools form the basis of the searches and the themes of the communications that happen in a network. It is a relational database where searches can be finally weighed according to project criteria. Once populated, the platform becomes the communication format throughout the lifetime of projects.
+                        </p>
                     </div>
                     <div class="col-md-5">
                         <img class="featurette-image img-fluid mx-auto" style="border-radius:50%" width=300 src="img/projects/dira.png"
@@ -204,6 +200,18 @@
             </div>
         </section>
     </main>
+    <hr class="featurette-divider">
+    <footer id="footer" style="padding-bottom:70px">
+        <div class="container">
+          <div class="row text-center">
+            <p>&copy; 2015 Infers Group PTY (LTD). All Rights Reserved.</p>
+            <div class="credits">
+  
+              Designed by Infers Group PTY (LTD)
+            </div>
+          </div>
+        </div>
+      </footer>
 
 
 
