--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="banner-info text-center wow fadeIn delay-05s" style="margin-top:10vh">
-                                <h2 class="bnr-sub-title" style="color:black">Infers Group</h2>
+                                <h2 class="bnr-sub-title" style="color:black">Who We Are</h2>
                                 <p class="bnr-para" style="color:black">"Bridging the knowledge gap"</p>
                                 <div class="overlay-detail">
                                     <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
@@ -70,8 +70,8 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div id="feature" class="vision-item">
-                                <h2 class="featurette-heading"><span style="font-size: 50px;color:black">Who</span> <span style="font-size: 60px;">We Are</span></span></h2>
-                            <p>Infers Group was set up in 2015 as a knowledge management company that connects societies
+                             
+                            <p style="padding-top:70px;">Infers Group was set up in 2015 as a knowledge management company that connects societies
                                 and
                                 knowledge producers/institutions to communicate, engage and establish each other’s
                                 relevance for
@@ -143,10 +143,9 @@
         <section id="team" class="team-section text-center my-5">
 
             <!-- Section heading -->
-            <h2 class="h1-responsive font-weight-bold my-5">Our <span style="color:black;font-size:55px">Amazing</span> Team</h2>
+            <h2 class="h1-responsive font-weight-bold my-5" style="font-size: 50px;" >Our <span style="color:black;font-size:55px"></span> Team</h2>
             <!-- Section description -->
-            <p class="grey-text w-responsive mx-auto mb-5 text-center">Loream iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-                eum porro a pariatur veniam.</p>
+           
 
             <div class="container">
                 <!-- Grid row -->
@@ -158,7 +157,7 @@
                             <img src="img/team/abe.jpg" width=230 class="rounded z-depth-1" alt="Sample avatar">
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Abraham Mamela</h5>
-                        <p class="text-uppercase blue-text"><strong>Optimus Gaytron</strong></p>
+                        <p class="text-uppercase blue-text"><strong>DIRECTOR</strong></p>
                         <p class="grey-text">Innovation for Knowledge Economy thought leader; Policy and Engagement
                             Specialist.</p>
 
@@ -171,7 +170,7 @@
                             <img src="img/team/che.jpg" width=230 class="rounded z-depth-1" alt="Sample avatar">
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Cheryl S. Ntumy</h5>
-                        <p class="text-uppercase blue-text"><strong>Director</strong></p>
+                        <p class="text-uppercase blue-text"><strong>Author & Creative</strong></p>
                         <p class="grey-text">Creative Facilitation; Author; Creative Fiction Consultant.</p>
 
                     </div>
@@ -249,8 +248,8 @@
                             <img src="img/team/taps.jpg" width=230 class="rounded z-depth-1" alt="Sample avatar">
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Tapiwa Kangwa</h5>
-                        <p class="text-uppercase blue-text"><strong>Finance Management</strong></p>
-                        <p class="grey-text"> Creative City Indicator Developer.</p>
+                        <p class="text-uppercase blue-text"><strong>Accountant</strong></p>
+                        <p class="grey-text"> Finance Management.</p>
 
                     </div>
                     <!-- Grid column -->
@@ -259,8 +258,8 @@
             </div>
         </section>
         <!-- Section: Team v.1 -->
-
-    <footer id="footer" style="padding-top:60px">
+        <hr class="featurette-divider">
+    <footer id="footer" style="padding-bottom:40px;">
             <div class="container">
               <div class="row text-center">
                 <p>&copy; 2015 Infers Group PTY (LTD). All Rights Reserved.</p>
