--- a/about.html
+++ b/about.html
@@ -51,11 +51,11 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="banner-info text-center wow fadeIn delay-05s" style="margin-top:10vh">
-                                <h2 class="bnr-sub-title" style="color:black">Who We Are</h2>
+                            <div class="banner-info text-left wow fadeIn delay-05s" style="margin-top:10vh;margin-left:10vw">
+                                <h2 class="bnr-sub-title" style="color:black">What Are We All About?</h2>
                                 <p class="bnr-para" style="color:black">"Bridging the knowledge gap"</p>
                                 <div class="overlay-detail">
-                                    <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
+                                    <a href="#feature" style="display:block;width:60vw;margin:auto"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                                 </div>
                             </div>
                         </div>
