--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="navbar-brand" href="index.html"><img style="margin-top:-10px" width=50  src="img/logos/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img style="margin-top:-10px;margin-left:30px" width=50  src="img/logos/logo.png" alt="logo"></a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -49,11 +49,11 @@
         <div class="wrapper">
           <div class="container">
             <div class="row">
-              <div class="banner-info text-center wow fadeIn delay-05s" style="padding-top:150px">
-                <h2 class="bnr-sub-title" id="main">Infers Group</h2>
-                <p class="bnr-para" style="font-size:20px">Our core business is knowledge management. We exist to bridge the gap between society and the knowledge producers in Africa. We bring together brilliant minds, creating ecosystems that allow the ambition of knowledge economies to become reality.</p>
+              <div class="banner-info text-left wow fadeIn delay-05s " style="margin-left:10vw;">
+                <h2 class="bnr-sub-title" style="text-align:left;color:rgb(255, 255, 255) ">Infers Group</h2>
+                <p class="bnr-para" style="font-size:20px;color:(150, 150, 150);width:60vw">Our core business is knowledge management. We exist to bridge the gap between society and the knowledge producers in Africa. We bring together brilliant minds, creating ecosystems that allow the ambition of knowledge economies to become reality.</p>
                 <div class="overlay-detail">
-                  <a href="#feature"><img src="img/arrow.gif" width=90 alt="arrow"></a>
+                  <a href="#serv"><img src="img/arrow.gif" width=90 alt="arrow"></a>
                 </div>
               </div>
             </div>
@@ -64,10 +64,24 @@
     <!--/ HEADER-->
     <!---->
 
+    <section class="mandate section-padding wow fadeInUp delay-05s" id="mandate">
+      <div class="container">
+          <div class="row featurette">
+              <div class="col-md-7">
+                <h2 class="featurette-heading"><span style="font-size: 60px;color:black">Our</span> <span style="font-size: 60px;">Mandate</span></span></h2>
+                <p class="lead">We bring together brilliant minds, creating ecosystems that allow the ambition of knowledge economies to become reality.</p>
+              </div>
+              <div class="col-md-5">
+                <img class="featurette-image img-fluid mx-auto" width=300 style="margin-left:20%; margin-top:-30px" src="img/mandate.svg" alt="mandate image">
+              </div>
+            </div>
+      </div>
+</section>
+
     <section id="feature" class="section-padding wow fadeIn delay-05s">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12 projects">
             <div class="wrap-item text-center">
               <div class="item-img">
                 <img src="img/ser01.png" class="img-scale">
@@ -76,7 +90,7 @@
               
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12 projects">
             <div class="wrap-item text-center">
               <div class="item-img">
                 <img src="img/ser03.png" class="img-scale">
@@ -84,7 +98,7 @@
               <h3 class="pad-bt15">Ecosystems <br>&amp;<br> Networks</h3>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12 projects">
             <div class="wrap-item text-center">
               <div class="item-img">
                 <img src="img/ser02.png" class="img-scale">
@@ -92,7 +106,7 @@
               <h3 class="pad-bt15">Strategy <br>&amp;<br> Risk Assessment</h3>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12 projects">
             <div class="wrap-item text-center">
               <div class="item-img">
                 <img src="img/ser04.png" class="img-scale">
@@ -105,20 +119,6 @@
       </div>
     </section>
     <!---->
-
-    <section class="mandate section-padding wow fadeInUp delay-05s" id="mandate">
-            <div class="container">
-                <div class="row featurette">
-                    <div class="col-md-7">
-                      <h2 class="featurette-heading"><span style="font-size: 60px;color:black">Our</span> <span style="font-size: 60px;">Mandate</span></span></h2>
-                      <p class="lead">We bring together brilliant minds, creating ecosystems that allow the ambition of knowledge economies to become reality.</p>
-                    </div>
-                    <div class="col-md-5">
-                      <img class="featurette-image img-fluid mx-auto" width=300 style="margin-left:20%; margin-top:-30px" src="img/mandate.svg" alt="mandate image">
-                    </div>
-                  </div>
-            </div>
-    </section>
 
     <!---->
     <section id="service" class="section-padding wow fadeInUp delay-05s">
