--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/projects.css">
     <title>infersgroup - Projects</title>
 </head>
 
@@ -108,7 +108,7 @@
 
                 <div class="row featurette">
                     <div class="col-md-5 order-md-1">
-                        <img class="featurette-image img-fluid mx-auto" width=500 style="padding-top:150px;display:block;margin:auto;" src="img/projects/sadc.png"
+                        <img class="featurette-image img-fluid mx-auto" width=500 style="padding-top:70px;display:block;margin:auto;" src="img/projects/sadc.png"
                             alt="Watermellon image">
                     </div>
                     <div class="col-md-7 order-md-2">
