--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img style="margin-top:-10px" width=50 src="img/logos/logo.png"
+              <a class="navbar-brand" href="#"><img style="margin-top:-10px;margin-left:30px" width=50 src="img/logos/logo.png"
                   alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
@@ -48,11 +48,11 @@
       <div class="wrapper">
         <div class="container">
           <div class="row">
-            <div class="banner-info text-center wow fadeIn delay-05s" style="margin-top:10vh">
-              <h2 class="bnr-sub-title" style="color:black">What we offer.</h2>
-              <p class="bnr-para" style="color:black">"Bridging the knowledge gap"</p>
+            <div class="banner-info text-left wow fadeIn delay-05s" style="margin-top:10vh;margin-left:10vw">
+              <h2 class="bnr-sub-title" style="color:rgb(90, 90, 90);text-align: left">What we offer.</h2>
+              <p class="bnr-para" style="color:rgb(90, 90, 90);text-align: left">"Bridging the knowledge gap"</p>
               <div class="overlay-detail">
-                <a href="#serv"><img src="img/arrow.gif" width=90 alt="arrow"></a>
+                <a href="#serv" style="display:block;width:60vw;margin:auto"><img src="img/arrow.gif" width=90 alt="arrow"></a>
               </div>
             </div>
           </div>
@@ -63,18 +63,19 @@
   <!--/ HEADER-->
 
   <main>
-    <section>
-      <div class="container">
+    <section style="">
+      
+      <div class="container" style="padding-top:100px">
 
 
         <div class="row mbr-justify-content-center" id="serv">
 
-          <div class="col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
+          <div class="mbr-col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
             <div class="wrap">
               <div class="ico-wrap">
-                <span class="mbr-iconfont fa-volume-up fa"></span>
+                <span class="mbr-iconfont fa-globe fa"></span>
               </div>
-              <div class="text-wrap vcenter">
+              <div class="text-wrap vcenter ">
                 <p class="mbr-fonts-style text1 mbr-text display-6">Infers Group is a knowledge management company that
                   exists to bridge the gap between society and the knowledge producers in Africa. Based in Gaborone with
                   an extension in Cape Town, South Africa, we bring together brilliant minds, creating ecosystems that
@@ -82,10 +83,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
+          <div class="mbr-col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
             <div class="wrap">
               <div class="ico-wrap">
-                <span class="mbr-iconfont fa-calendar fa"></span>
+                <span class="mbr-iconfont fa-globe fa"></span>
               </div>
               <div class="text-wrap vcenter">
 
@@ -144,11 +145,11 @@
       </div>
     </section>
 
-    <section>
+    <section style="background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);">
       <div class="container">
         <div class="row mbr-justify-content-center">
-          <div class="col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
-            <div class="wrap">
+          <div class="mbr-col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s" >
+            <div class="wrap" style="background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%)">
               <div class="ico-wrap">
                 <span class="mbr-iconfont fa-globe fa"></span>
               </div>
@@ -162,10 +163,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s">
-            <div class="wrap">
+          <div class="mbr-col-lg-6 mbr-col-md-10 wow fadeInUp delay-05s" >
+            <div class="wrap" style="background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%)">
               <div class="ico-wrap">
-                <span class="mbr-iconfont fa-trophy fa"></span>
+                <span class="mbr-iconfont fa-globe fa"></span>
               </div>
               <div class="text-wrap vcenter">
 
