refined index projects and services page and added google map

--- a/projects.html
+++ b/projects.html
@@ -199,6 +199,10 @@
                 </div>
             </div>
         </section>
+
+        <section style="background: url('img/afro.jpg');background-size:cover;height:90vh">
+            
+        </section>
     </main>
     <hr class="featurette-divider">
     <footer id="footer" style="padding-bottom:70px">
