added new image

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 
     <main>
 
-        <section class="cust-container" id="projects">
+        <section class="cust-container" id="projects" style="margin-top:70px">
             <div class="row">
                 <!--/START NANOVERSE DIV BLOCK/-->
                 <div class="col-lg-4" id="nano">
