--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                         alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1 style="color:black">Another example headline.</h1>
-                            <p style="color:black">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-                                gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <h1 style="color:black">Paving Roads For Youth.</h1>
+                            <p style="color:black">Using a youth-employing-youth model designed to facilitate the development of generative
+                                    youth owned enterprises.</p>
                             <p><a class="btn btn-lg btn-primary" style="background-color: transparent;border:1px solid rgb(0, 0, 0);color:black" href="#" role="button">Learn more</a></p>
                         </div>
                     </div>
